--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <header>
-    <nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg fixed-top text-shadow" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./assets/img/viajes.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="./assets/img/viajes.svg" alt="Logo" width="30" height="24"
+                    class="d-inline-block align-text-top">
                 Viajes de Chile
-              </a>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -77,6 +79,36 @@
     </div>
 </header>
 
+<Section>
+    <div class="container text-center text-light my-5">
+        <div class="row align-items-center">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary my-2" type="button"><i class="fa-solid fa-plane"></i></button>
+                </div>
+                Descubre Chile desde las alturas con nuestros vuelos panorámicos. Disfruta de vistas impresionantes de
+                la cordillera, lagos cristalinos y costas infinitas. Una experiencia única para los amantes de la
+                aventura y la fotografía aérea
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
+                Embárcate en una aventura inolvidable a través de los paisajes más salvajes de Chile. Nuestros expertos
+                guías te llevarán a explorar senderos remotos, bosques milenarios y majestuosos glaciares. Prepárate
+                para conectar con la naturaleza en su estado más puro.
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary my-2" type="button"><i class="fa-solid fa-mountain"></i></button>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary my-2" type="button"><i class="fa-solid fa-route"></i></i></button>
+                </div>
+                Descubre Chile a tu propio ritmo con nuestras exclusivas rutas personalizadas. Desde el desierto más
+                árido del mundo hasta la Patagonia salvaje, cada ruta está diseñada para ofrecerte una experiencia
+                única, llena de cultura, historia y paisajes impresionantes..
+            </div>
+        </div>
+    </div>
+</Section>
 
 
 
@@ -87,6 +119,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d9dc9a28ed.js" crossorigin="anonymous"></script>
 </body>
+
 
 </html>
