--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="#QuienesSomos">Quienes Somos</a> <!-- funciona el enlace -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Destacados</a>
+                        <a class="nav-link" href="#Destacados">Destacados</a><!-- funciona el enlace -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Contacto</a>
+                        <a class="nav-link" href="#Contacto">Contacto</a><!-- funciona el enlace -->
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,8 @@
     </div>
 </header>
 
-<Section>
+<Section id="QuienesSomos">
+    <h2 class="text-light text-center mt-5">Quienes Somos</h2>
     <div class="container text-center text-light my-5">
         <div class="row align-items-center">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
@@ -110,7 +111,47 @@
     </div>
 </Section>
 
+<Section id="Destacados" class="my-5">
+    <h2 class="text-light text-center my-5">Destacados</h2>
+    <div class="container text-center text-align-center">
+        <div class="row align-items-start">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/img/card1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Embárcate en una aventura épica en Torres del Paine. Descubre picos imponentes, glaciares centenarios y lagos de aguas turquesa en uno de los parques naturales más impresionantes del mundo.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/img/card2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Sumérgete en la magia de San Pedro de Atacama, donde el desierto más árido del planeta te espera con sus espectaculares paisajes de salares, géiseres y cielos estrellados que te dejarán sin aliento..</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/img/card3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Vive una experiencia única en la Laguna Cejar, un oasis de aguas cristalinas y salinas que te invita a flotar como en el Mar Muerto. Disfruta de la serenidad y la belleza natural de este paraíso escondido.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/img/card4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Explora la exuberante Selva Valdiviana, un tesoro de biodiversidad en el sur de Chile. Déjate cautivar por sus densos bosques, cascadas majestuosas y una vida silvestre única que te conectará con la naturaleza en su estado más puro.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+
+</Section>
 
 
 
