Seccion contacto y ajustes menores

--- a/index.html
+++ b/index.html
@@ -114,46 +114,68 @@
 <Section id="Destacados" class="my-5">
     <h2 class="text-light text-center my-5">Destacados</h2>
     <div class="container text-center text-align-center">
-        <div class="row align-items-start">
+        <div class="row justify-content-center align-items-end">
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card my-2 text-bg-primary" style="width: 18rem;">
                     <img src="./assets/img/card1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Embárcate en una aventura épica en Torres del Paine. Descubre picos imponentes, glaciares centenarios y lagos de aguas turquesa en uno de los parques naturales más impresionantes del mundo.</p>
+                        <p class="card-text">Embárcate en una aventura épica en Torres del Paine. Descubre picos
+                            imponentes, glaciares centenarios y lagos de aguas turquesa en uno de los parques naturales
+                            más impresionantes del mundo.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card my-2 text-bg-primary" style="width: 18rem;">
                     <img src="./assets/img/card2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Sumérgete en la magia de San Pedro de Atacama, donde el desierto más árido del planeta te espera con sus espectaculares paisajes de salares, géiseres y cielos estrellados que te dejarán sin aliento..</p>
+                        <p class="card-text">Sumérgete en la magia de San Pedro de Atacama, donde el desierto más árido
+                            del planeta te espera con sus espectaculares paisajes de salares, géiseres y cielos
+                            estrellados que te dejarán sin aliento.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card my-2 text-bg-primary" style="width: 18rem;">
                     <img src="./assets/img/card3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Vive una experiencia única en la Laguna Cejar, un oasis de aguas cristalinas y salinas que te invita a flotar como en el Mar Muerto. Disfruta de la serenidad y la belleza natural de este paraíso escondido.</p>
+                        <p class="card-text">Vive una experiencia única en la Laguna Cejar, un oasis de aguas
+                            cristalinas y salinas que te invita a flotar como en el Mar Muerto. Disfruta de la serenidad
+                            y la belleza natural de este paraíso escondido.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card my-2 text-bg-primary" style="width: 18rem;">
                     <img src="./assets/img/card4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Explora la exuberante Selva Valdiviana, un tesoro de biodiversidad en el sur de Chile. Déjate cautivar por sus densos bosques, cascadas majestuosas y una vida silvestre única que te conectará con la naturaleza en su estado más puro.</p>
+                        <p class="card-text">Explora la exuberante Selva Valdiviana, un tesoro de biodiversidad en el
+                            sur de Chile. Déjate cautivar por sus densos bosques, cascadas majestuosas y una vida
+                            silvestre única que te conectará con la naturaleza en su estado más puro.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 </Section>
 
-
+<Section id="Contacto" class="my-5">
+    <h2 class="text-light text-center my-5">Contacto</h2>
+    <form class="text-light mx-5 px-5">
+        <div class="mb-3">
+          <label for="mb-3" class="form-label">Nombre</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Asunto</label>
+          <input type="text" class="form-control">
+        </div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Mensaje</label>
+        <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+      </form>
+</section>
 
 <body>
 
