Se adicionan popover, js script, y ajustes mejores

--- a/index.html
+++ b/index.html
@@ -15,174 +15,198 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<header>
-    <nav class="navbar navbar-expand-lg fixed-top text-shadow" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="./assets/img/viajes.svg" alt="Logo" width="30" height="24"
-                    class="d-inline-block align-text-top">
-                Viajes de Chile
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class=" collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#QuienesSomos">Quienes Somos</a> <!-- funciona el enlace -->
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Destacados">Destacados</a><!-- funciona el enlace -->
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Contacto">Contacto</a><!-- funciona el enlace -->
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="Llamas en San Pedro">
-            </div>
-            <div class="carousel-item">
-                <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="Moais en Isla de Pascua">
-            </div>
-            <div class="carousel-item">
-                <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="Pinguino en Punta Arenas">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-</header>
-
-<Section id="QuienesSomos">
-    <h2 class="text-light text-center mt-5">Quienes Somos</h2>
-    <div class="container text-center text-light my-5">
-        <div class="row align-items-center">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
-                <div class="d-grid gap-2">
-                    <button class="btn btn-primary my-2" type="button"><i class="fa-solid fa-plane"></i></button>
-                </div>
-                Descubre Chile desde las alturas con nuestros vuelos panorámicos. Disfruta de vistas impresionantes de
-                la cordillera, lagos cristalinos y costas infinitas. Una experiencia única para los amantes de la
-                aventura y la fotografía aérea
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
-                Embárcate en una aventura inolvidable a través de los paisajes más salvajes de Chile. Nuestros expertos
-                guías te llevarán a explorar senderos remotos, bosques milenarios y majestuosos glaciares. Prepárate
-                para conectar con la naturaleza en su estado más puro.
-                <div class="d-grid gap-2">
-                    <button class="btn btn-primary my-2" type="button"><i class="fa-solid fa-mountain"></i></button>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 my-2">
-                <div class="d-grid gap-2">
-                    <button class="btn btn-primary my-2" type="button"><i class="fa-solid fa-route"></i></i></button>
-                </div>
-                Descubre Chile a tu propio ritmo con nuestras exclusivas rutas personalizadas. Desde el desierto más
-                árido del mundo hasta la Patagonia salvaje, cada ruta está diseñada para ofrecerte una experiencia
-                única, llena de cultura, historia y paisajes impresionantes..
-            </div>
-        </div>
-    </div>
-</Section>
-
-<Section id="Destacados" class="my-5">
-    <h2 class="text-light text-center my-5">Destacados</h2>
-    <div class="container text-center text-align-center">
-        <div class="row justify-content-center align-items-end">
-            <div class="col">
-                <div class="card my-2 text-bg-primary" style="width: 18rem;">
-                    <img src="./assets/img/card1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Embárcate en una aventura épica en Torres del Paine. Descubre picos
-                            imponentes, glaciares centenarios y lagos de aguas turquesa en uno de los parques naturales
-                            más impresionantes del mundo.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card my-2 text-bg-primary" style="width: 18rem;">
-                    <img src="./assets/img/card2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Sumérgete en la magia de San Pedro de Atacama, donde el desierto más árido
-                            del planeta te espera con sus espectaculares paisajes de salares, géiseres y cielos
-                            estrellados que te dejarán sin aliento.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card my-2 text-bg-primary" style="width: 18rem;">
-                    <img src="./assets/img/card3.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Vive una experiencia única en la Laguna Cejar, un oasis de aguas
-                            cristalinas y salinas que te invita a flotar como en el Mar Muerto. Disfruta de la serenidad
-                            y la belleza natural de este paraíso escondido.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card my-2 text-bg-primary" style="width: 18rem;">
-                    <img src="./assets/img/card4.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Explora la exuberante Selva Valdiviana, un tesoro de biodiversidad en el
-                            sur de Chile. Déjate cautivar por sus densos bosques, cascadas majestuosas y una vida
-                            silvestre única que te conectará con la naturaleza en su estado más puro.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</Section>
-
-<Section id="Contacto" class="my-5">
-    <h2 class="text-light text-center my-5">Contacto</h2>
-    <form class="text-light mx-5 px-5">
-        <div class="mb-3">
-          <label for="mb-3" class="form-label">Nombre</label>
-          <input type="text" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Asunto</label>
-          <input type="text" class="form-control">
-        </div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Mensaje</label>
-        <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary mt-3">Submit</button>
-      </form>
-</section>
 
 <body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top text-shadow" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/img/viajes.svg" alt="Logo" width="30" height="24"
+                        class="d-inline-block align-text-top">
+                    Viajes de Chile
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class=" collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#QuienesSomos">Quienes Somos</a> <!-- funciona el enlace -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Destacados">Destacados</a><!-- funciona el enlace -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Contacto">Contacto</a><!-- funciona el enlace -->
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="Llamas en San Pedro">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="Moais en Isla de Pascua">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="Pinguino en Punta Arenas">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </header>
+
+    <Section id="QuienesSomos" class="d-none d-sm-block">
+        <h2 class="text-light text-center mt-5">Quienes Somos</h2>
+        <div class="container text-center text-light my-5">
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary my-2" data-bs-toggle="popover" type="button"
+                            data-bs-placement="top" data-bs-content="Presiona para más info">
+                            <i class="fa-solid fa-plane"></i>
+                        </button>
+                    </div>
+                    Descubre Chile desde las alturas con nuestros vuelos panorámicos. Disfruta de vistas impresionantes
+                    de
+                    la cordillera, lagos cristalinos y costas infinitas. Una experiencia única para los amantes de la
+                    aventura y la fotografía aérea
+                </div>
+                <div class="col">
+                    Embárcate en una aventura inolvidable a través de los paisajes más salvajes de Chile. Nuestros
+                    expertos
+                    guías te llevarán a explorar senderos remotos, bosques milenarios y majestuosos glaciares. Prepárate
+                    para conectar con la naturaleza en su estado más puro.
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary my-2" data-bs-toggle="popover" type="button"
+                            data-bs-placement="bottom" data-bs-content="Presiona para más info">
+                            <i class="fa-solid fa-mountain"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary my-2" data-bs-toggle="popover" type="button"
+                            data-bs-placement="top" data-bs-content="Presiona para más info">
+                            <i class="fa-solid fa-route"></i>
+                        </button>
+                    </div>
+                    Descubre Chile a tu propio ritmo con nuestras exclusivas rutas personalizadas. Desde el desierto más
+                    árido del mundo hasta la Patagonia salvaje, cada ruta está diseñada para ofrecerte una experiencia
+                    única, llena de cultura, historia y paisajes impresionantes..
+                </div>
+            </div>
+        </div>
+    </Section>
+
+    <Section id="Destacados" class="my-5">
+        <h2 class="text-light text-center my-5">Destacados</h2>
+        <div class="container text-center text-align-center">
+            <div class="row justify-content-center align-items-end">
+                <div class="col">
+                    <div class="card my-2 text-bg-primary" style="width: 18rem;">
+                        <img src="./assets/img/card1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Embárcate en una aventura épica en Torres del Paine. Descubre picos
+                                imponentes, glaciares centenarios y lagos de aguas turquesa en uno de los parques
+                                naturales
+                                más impresionantes del mundo.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card my-2 text-bg-primary" style="width: 18rem;">
+                        <img src="./assets/img/card2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Sumérgete en la magia de San Pedro de Atacama, donde el desierto más
+                                árido
+                                del planeta te espera con sus espectaculares paisajes de salares, géiseres y cielos
+                                estrellados que te dejarán sin aliento.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card my-2 text-bg-primary" style="width: 18rem;">
+                        <img src="./assets/img/card3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Vive una experiencia única en la Laguna Cejar, un oasis de aguas
+                                cristalinas y salinas que te invita a flotar como en el Mar Muerto. Disfruta de la
+                                serenidad
+                                y la belleza natural de este paraíso escondido.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card my-2 text-bg-primary" style="width: 18rem;">
+                        <img src="./assets/img/card4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Explora la exuberante Selva Valdiviana, un tesoro de biodiversidad en
+                                el
+                                sur de Chile. Déjate cautivar por sus densos bosques, cascadas majestuosas y una vida
+                                silvestre única que te conectará con la naturaleza en su estado más puro.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </Section>
+
+    <Section id="Contacto" class="my-5">
+        <h2 class="text-light text-center my-5">Contacto</h2>
+        <form class="text-light mx-5 px-5">
+            <div class="mb-3">
+                <label for="mb-3" class="form-label">Nombre</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Asunto</label>
+                <input type="text" class="form-control">
+            </div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Mensaje</label>
+            <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+        </form>
+    </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d9dc9a28ed.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 
