--- a/index.html
+++ b/index.html
@@ -195,6 +195,22 @@
         </form>
     </section>
 
+    <footer class="bg-dark text-light py-4">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <a href="#" class="text-light"><i class="fab fa-instagram fa-2x mx-2"></i></a>
+                    <a href="#" class="text-light"><i class="fab fa-facebook fa-2x mx-2"></i></a>
+                    <a href="#" class="text-light"><i class="fab fa-x-twitter fa-2x mx-2"></i></a>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col">
+                    <p>&copy; 2024 Viajes Chile. Todos los derechos reservados.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
